[gd_scene load_steps=6 format=3 uid="uid://c4feheqd6xakg"]

[ext_resource type="Script" path="res://Enviornment/Scripts/world.gd" id="1_dsyey"]
[ext_resource type="PackedScene" uid="uid://c47gc5d1khumu" path="res://Prototype/protoground.tscn" id="2_lw4s2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jop4l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_f2vm0"]
sky_material = SubResource("ProceduralSkyMaterial_jop4l")

[sub_resource type="Environment" id="Environment_uni31"]
background_mode = 2
sky = SubResource("Sky_f2vm0")
tonemap_mode = 2
glow_enabled = true

[node name="World" type="Node3D"]
script = ExtResource("1_dsyey")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uni31")

[node name="protoground" parent="." instance=ExtResource("2_lw4s2")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 372.0
offset_top = 206.0
offset_right = -372.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Your Ip" type="LineEdit" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your Local IP: "
alignment = 1
editable = false

[node name="Your Ip2" type="LineEdit" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Global IP Not Found "
alignment = 1
editable = false

[node name="Join" type="Button" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="IPEntry" type="LineEdit" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP"
alignment = 1

[node name="Quit" type="Button" parent="CanvasLayer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/Menu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
